--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>FizzBuzz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #e3f2fd;">
-          <a class="navbar-brand" href="#">Navbar</a>
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #212121;">
+          <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
@@ -23,13 +23,13 @@
                       <a class="nav-link" href="solve.html">Solve</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Code</a>
+                    <a class="nav-link" href="code.html">Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Portfolio</a>
+                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app" target = "_blank">Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#" target="_blank">GitHub</a>
+                    <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank">GitHub</a>
                 </li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
