--- a/code.html
+++ b/code.html
@@ -10,20 +10,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #212121;">
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ff993b;">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="solve.html">Solve</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="code.html">Code</a>
+                    <a class="nav-link" href="code.html">Code <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="" target = "_blank">Portfolio</a>
@@ -31,18 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank">GitHub</a>
                 </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                      <div class="dropdown-menu" aria-labelledby="dropdownId">
-                          <a class="dropdown-item" href="#">Action 1</a>
-                          <a class="dropdown-item" href="#">Action 2</a>
-                      </div>
-                  </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
           </div>
       </nav>
       
