--- a/solve.html
+++ b/solve.html
@@ -12,51 +12,57 @@
   </head>
 
   <body>
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #212121;">
+
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ff993b;">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
               <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html">Home </a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="solve.html">Solve</a>
+                      <a class="nav-link" href="solve.html">Solve <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="code.html">Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="" target = "_blank">Portfolio</a>
+                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app/" target = "_blank">Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank">GitHub</a>
                 </li>
               </ul>
-              <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
           </div>
       </nav>
 
       <div class="container pt-5">
           <div class="row">
               <div class="col form-group">
-                  <input class="form-control" id="input1" placeholder="input a number" type="number" />
+                  <input class="form-control" id="input1" placeholder="Only see me if you delete" value="3" 
+                  type="number" />
               </div>
               <div class="col form-group">
-                 <input class="form-control" id="input2" value="12" />
+                 <input class="form-control" id="input2" value="5" />
               </div>
           </div>
               <div class="row">
                   <div class="col-6 offset-3 form-group">
-                      <button class="btn btn-outline-danger btnWide">Click Me</button>
+                      <button class="btn btn-outline-danger btnWide" id="fizzButton">Click Me</button>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col-4 offset-6">
+                      <p id="clickMe">I will show results</p>
+                      <hr />
+                      <p id="result"></p>
                   </div>
               </div>
           </div>
    
+
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
