--- a/solve.html
+++ b/solve.html
@@ -41,7 +41,7 @@
       <div class="container pt-5">
           <div class="row">
               <div class="col form-group">
-                  <input class="form-control" id="input1" placeholder="Only see me if you delete" value="3" 
+                  <input class="form-control" id="input1" placeholder="Input first number" value="3" 
                   type="number" />
               </div>
               <div class="col form-group">
@@ -52,7 +52,7 @@
                   <div class="col-6 offset-3 form-group">
                       <button class="btn btn-outline-danger btnWide" id="fizzButton">Click Me</button>
                   </div>
-              </div>
+              </div>             
               <div class="row">
                   <div class="col-4 offset-6">
                       <p id="clickMe">I will show results</p>
