--- a/code.html
+++ b/code.html
@@ -77,7 +77,7 @@ function runTheNumbers(num1, num2){
             {
                 solution.innerHTML += loop;
             }
-            solution.innerHTML = output;
+            solution.innerHTML += output;
             }
         };
         
