--- a/solve.html
+++ b/solve.html
@@ -41,21 +41,23 @@
       <div class="container pt-5">
           <div class="row">
               <div class="col form-group">
-                  <input class="form-control" id="input1" placeholder="Input first number" value="3" 
-                  type="number" />
+                  <input class="form-control" id="input1" placeholder="First number" type="number" />
               </div>
               <div class="col form-group">
-                 <input class="form-control" id="input2" value="5" />
+                 <input class="form-control" id="input2" placeholder="Second number" type="number" />
               </div>
           </div>
               <div class="row">
                   <div class="col-6 offset-3 form-group">
-                      <button class="btn btn-outline-danger btnWide" id="fizzButton">Click Me</button>
+                      <button class="btn btn-outline-danger btnWide" id="fizzButton">FizzBizz!</button>
                   </div>
+                  <div class="col-6 offset-3 form-group">
+                    <button id=btnClear class="btn-outline-success btnWide">Clear</button>
+                </div>
               </div>             
               <div class="row">
-                  <div class="col-4 offset-6">
-                      <p id="clickMe">I will show results</p>
+                  <div class="col">
+                      <p>I will show results</p>
                       <hr />
                       <p id="result"></p>
                   </div>
