--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ff993b;">
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #002f4e;">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -34,6 +34,21 @@
               </ul>
           </div>
       </nav>
+      <header><div class="jumbotron jumbotron-fluid">
+          <div class="container">
+              <h1 class="display-3">Welcome to FizzBuzz!</h1>
+              <hr class="my-2">
+              <br>
+              <br>
+              <div class="row">
+                  <div class="col-12 offset-4 form-group">
+              <p class="lead">
+                  <a class="btn btn-primary btn-lg" href="solve.html" role="button">Come play!</a>
+              </p>
+            </div>
+              </div>
+          </div>
+      </div></header>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
