--- a/solve.html
+++ b/solve.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>FizzBuzz</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
 
   <body>
 
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ff993b;">
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #002f4e">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
@@ -49,15 +49,15 @@
           </div>
               <div class="row">
                   <div class="col-6 offset-3 form-group">
-                      <button class="btn btn-outline-danger btnWide" id="fizzButton">FizzBizz!</button>
+                      <button class="btn btn-primary btnWide" id="fizzButton">FizzBizz!</button>
                   </div>
                   <div class="col-6 offset-3 form-group">
-                    <button id=btnClear class="btn-outline-success btnWide">Clear</button>
+                    <button id=btnClear class="btn-outline-primary btnWide">Clear</button>
                 </div>
               </div>             
               <div class="row">
                   <div class="col">
-                      <p>I will show results</p>
+                      <p>FizzBuzz Results!</p>
                       <hr />
                       <p id="result"></p>
                   </div>
