--- a/code.html
+++ b/code.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/prism.css">
 </head>
   <body>
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #ff993b;">
+      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #002f4e;">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
