--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
           </div>
       </nav>
       <header><div class="jumbotron jumbotron-fluid">
-          <div class="container">
+          <div class="container d-flex flex-column align-items-center aos-init aos-animate"
+          data-aos= "zoom-in"data-aos-delay= "100">
               <h1 class="display-3">Welcome to FizzBuzz!</h1>
               <hr class="my-2">
               <br>
               <br>
               <div class="row">
-                  <div class="col-12 offset-4 form-group">
+                  <div class="col">
               <p class="lead">
                   <a class="btn btn-primary btn-lg" href="solve.html" role="button">Come play!</a>
               </p>
