--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
             </div>
               </div>
           </div>
-      </div></header>
+      </div>
+    </header>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
