--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
+    <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+</head>
   <body>
       <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #002f4e;">
           <a class="navbar-brand" href="index.html">FizzBuzz</a>
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                      <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="index.html"><i class="bx bx-home-heart"></i>Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="solve.html">Solve</a>
+                      <a class="nav-link" href="solve.html"><i class="bx bx-glasses-alt"></i>Solve</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="code.html">Code</a>
+                    <a class="nav-link" href="code.html"><i class="bx bxl-javascript"></i>Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app" target = "_blank">Portfolio</a>
+                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app" target = "_blank"><i class="bx bx bx-briefcase-alt"></i>Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank">GitHub</a>
+                    <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank"><i class="bx bxl-github"></i>GitHub</a>
                 </li>
               </ul>
           </div>
