--- a/solve.html
+++ b/solve.html
@@ -8,6 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel='stylesheet' href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="css/fizzbuzz.css">
   </head>
 
@@ -18,21 +19,21 @@
           <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
               aria-expanded="false" aria-label="Toggle navigation"></button>
           <div class="collapse navbar-collapse" id="collapsibleNavId">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                   <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home </a>
+                      <a class="nav-link" href="index.html"><i class="bx bx-home-heart"></i>Home </a>
                   </li>
                   <li class="nav-item active">
-                      <a class="nav-link" href="solve.html">Solve <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="solve.html"><i class="bx bx-glasses-alt"></i>Solve <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="code.html">Code</a>
+                    <a class="nav-link" href="code.html"><i class="bx bxl-javascript"></i>Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app/" target = "_blank">Portfolio</a>
+                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app/" target = "_blank"><i class="bx bx-briefcase"></i>Portfolio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank">GitHub</a>
+                    <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank"><i class="bx bxl-github"></i>GitHub</a>
                 </li>
               </ul>
           </div>
@@ -43,10 +44,10 @@
           <hr>
             <div class="row">
               <div class="col-3 offset-3">
-                  <input class="form-control" id="input1" placeholder="First number" type="number" />
+                  <input class="form-control" id="input1" placeholder="First number" type="number" value="3" />
               </div>
               <div class="col-3">
-                 <input class="form-control" id="input2" placeholder="Second number" type="number" />
+                 <input class="form-control" id="input2" placeholder="Second number" type="number" value="5" />
               </div>
           </div>
           <br>
@@ -63,11 +64,20 @@
                   <div class="col">
                       <table id="fizzbuzzTable" class="table table-responsive-lg table-striped table-bordered mb-0 mt-3" tr style="background-color: lightblue strip">
                       <thead id="tableheader">
-                          <tr>
-                              <th scope="col"><strong>FizzBuzz Results!</strong></th>
-                          </tr>
-                          </thead>
+                          <tr><th colspan="5"><strong>FizzBuzz Results!</strong></th></tr>
+                          <!-- <th></th>
+                          <th></th>
+                          <th></th>
+                          <th></th>
+                          <th></th> -->
+                        </thead>
                         <tbody id="resultBody">
+                              <!-- <th>{{output}}</th>
+                              <th>{{output}}</th>
+                              <th>{{output}}</th>
+                              <th>{{output}}</th>
+                              <th>{{output}}</th> -->
+                        
                         </tbody>
                         </table>
                   </div>
