--- a/solve.html
+++ b/solve.html
@@ -40,7 +40,7 @@
       </nav>
 
       <div class="container text-center pt-5">
-          <p>Please enter two numbers.  FizzBuzz will then return a value of "Fizz" for numbers that are multiples of 3, "Buzz" for numbers that are multiples of 5, and "FizzBuzz" for numbers that are multiples of both.</h6>
+          <p>Please enter two numbers.  FizzBuzz will then return the numbers 1 through 100, replacing multiples of your first number with "Fizz", multiples of your second number with "Buzz", and for numbers that are multiples of both, "FizzBuzz"</h6>
           <hr>
             <div class="row">
               <div class="col-3 offset-3">
