--- a/solve.html
+++ b/solve.html
@@ -40,7 +40,8 @@
       </nav>
 
       <div class="container text-center pt-5">
-          <p>Please enter two numbers.  FizzBuzz will then return the numbers 1 through 100, replacing multiples of your first number with "Fizz", multiples of your second number with "Buzz", and for numbers that are multiples of both, "FizzBuzz"</h6>
+          <h5>Please enter two numbers.</h5>  
+        <h5><span class="FizzBuzz">FizzBuzz</span> will then return the numbers 1 through 100,<br> replacing multiples of your first number with "<span class="fizzhead">Fizz</span>", <br>multiples of your second number with "<span class="buzzhead">Buzz</span>", <br>and for numbers that are multiples of both, "<span class="fizzBuzzhead">FizzBuzz</span>"!</h5>
           <hr>
             <div class="row">
               <div class="col-3 offset-3">
@@ -64,7 +65,7 @@
                   <div class="col">
                       <table id="fizzbuzzTable" class="table table-responsive-lg table-striped table-bordered mb-0 mt-3" tr style="background-color: lightblue strip">
                       <thead id="tableheader">
-                          <tr><th colspan="5"><strong>FizzBuzz Results!</strong></th></tr>
+                          <tr><th colspan="5"><h5><strong>FizzBuzz Results!</strong></h5></th></tr>
                           <!-- <th></th>
                           <th></th>
                           <th></th>
