--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="code.html"><i class="bx bxl-javascript"></i>Code</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app" target = "_blank"><i class="bx bx bx-briefcase-alt"></i>Portfolio</a>
+                    <a class="nav-link" href="https://michellelongworth-portfolio.netlify.app" target = "_blank"><i class="bx bx-briefcase-alt"></i>Portfolio</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/michelle6818/FizzBuzz" target="_blank"><i class="bx bxl-github"></i>GitHub</a>
